-Fixes 411 (warning message getting cut off on shrinking browser window)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1507,6 +1507,11 @@ form.show-thankyou span.thank-you-message {
     left: -60%;
     right: -40%;
   }
+
+  .unsubscribe-survey form {
+    padding-top: var(--columnSpacing);
+    padding-bottom: var(--columnSpacing);
+  }
 }
 
 @media screen and (max-width: 480px) {
